--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <input id="i1" placeholder="your height (cm)">
 <button onclick="run()">計算</button>
-<div id="d1"></div>
+<div id="d1">For MEN</div>
 
 <script src="./lib.js"></script>
 <script>
